# assembly-calculus

./: .gitignore  MNIST_original.ipynb  brain.py  config.py  create_notebook.py  dataset.py  mnist_nemo.py  nemo-demo-pyac.ipynb  nemo-demo.ipynb  nemo-dfa-presentations.ipynb  plot.py  plot_ac_trace.py  plot_seen_ac_vs_mlp.py  run_experiment_suite.py  run_family_suite.py  scratch.py  temp_eval.py  train.py
models/: ac.py  (+8 more)
pyac/: .gitignore  pyproject.toml
pyac/notebooks/automata/: dfa_demo.ipynb  dfa_demo.nbconvert.ipynb
pyac/notebooks/ipc/: ipc_demo.ipynb
pyac/notebooks/mnist/: mnist_demo.ipynb
pyac/notebooks/replication/: mnist_colt2022.ipynb
pyac/src/pyac.egg-info/: top_level.txt
pyac/src/pyac/core/: connectivity.py  dynamics.py  inhibition.py  network.py  operations.py  plasticity.py  rng.py  types.py  weights.py
pyac/src/pyac/measures/: overlap.py  stability.py
pyac/src/pyac/measures/ipc/: basis.py  readout.py  runner.py
pyac/src/pyac/tasks/automata/: dfa.py  metrics.py  protocol.py
pyac/src/pyac/viz/: plotting.py
pyac/tests/: conftest.py
pyac/tests/integration/: test_dfa.py  test_mnist.py  test_network_integration.py  test_pointer_task.py  test_seen_comparison_plots.py
pyac/tests/regression/: test_replication.py
pyac/tests/unit/: test_connectivity.py  test_dynamics.py  test_extractors.py  test_homeostasis.py  test_inhibition.py  test_ipc_basis.py  test_ipc_readout.py  test_measures.py  test_mnist_encoder.py  test_network.py  test_operations.py  test_plasticity.py  test_rng.py  test_smoke.py  test_types.py  test_viz.py  test_weights.py
(+98 files in other folders)
